# tiny-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: HOW_IT_WORKS.md
tiny_agent/: __init__.py  cli.py
tiny_agent/core/: __init__.py  ai_providers.py  context.py  messages.py  skills.py  state.py  tools.py  utils.py
